// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TcpDuplexConnection when receiving data when buffer contains a single frame deserializes received frames and calls the configured handler 1`] = `
{
  "data": Uint8Array [
    104,
    101,
    108,
    108,
    111,
    32,
    119,
    111,
    114,
    108,
    100,
  ],
  "dataMimeType": "application/octet-stream",
  "flags": 256,
  "keepAlive": 60000,
  "lifetime": 300000,
  "majorVersion": 1,
  "metadata": Uint8Array [
    104,
    101,
    108,
    108,
    111,
    32,
    119,
    111,
    114,
    108,
    100,
  ],
  "metadataMimeType": "application/octet-stream",
  "minorVersion": 0,
  "resumeToken": null,
  "streamId": 0,
  "type": 1,
}
`;

exports[`TcpDuplexConnection when receiving data when buffer contains multiple frames deserializes received frames and calls the configured handler for each frame 1`] = `
[
  {
    "data": Uint8Array [
      104,
      101,
      108,
      108,
      111,
      32,
      119,
      111,
      114,
      108,
      100,
    ],
    "flags": 32,
    "metadata": null,
    "streamId": 1,
    "type": 10,
  },
]
`;

exports[`TcpDuplexConnection when receiving data when buffer contains multiple frames deserializes received frames and calls the configured handler for each frame 2`] = `
[
  {
    "data": Uint8Array [
      104,
      101,
      108,
      108,
      111,
      32,
      119,
      111,
      114,
      108,
      100,
      32,
      50,
    ],
    "flags": 32,
    "metadata": null,
    "streamId": 1,
    "type": 10,
  },
]
`;
